--- a/4_bank_loan_dummies.Rmd
+++ b/4_bank_loan_dummies.Rmd
@@ -8,9 +8,9 @@ knitr::opts_chunk$set(echo = TRUE)
 library(janitor)
 library(tidyverse)
 library(readxl)
-
-loan_data <- readRDS("ppp_covidadj.rds")
-old_data <- readRDS("ppp_loanonly_all_loans.rds")
+ppp_allvars_1024 <- readRDS('ppp_allvars_1024_notdone.rds')
+# loan_data <- readRDS("ppp_covidadj.rds")
+# old_data <- readRDS("ppp_loanonly_all_loans.rds")
 ```
 
 
@@ -190,7 +190,7 @@ summary(log_regression_test)
 ```
 
 ```{r}
-ppp_allvars_1024 <- readRDS('ppp_allvars_1024_notdone.rds')
+
 # Adding in marital status
 marital <- read_csv("raw_data/acs_marital/ACSST5Y2018.S1201_data_with_overlays_2020-10-19T152147.csv",
                     skip = 1) %>%
