--- a/8_counties.Rmd
+++ b/8_counties.Rmd
@@ -10,6 +10,9 @@ library(readxl)
 library(janitor)
 library(stringr)
 library(openintro)
+library(broom)
+library(lmtest)
+library(sandwich)
 
 loan_only <- readRDS('ppp_loanonly_all_loans.rds')
 ```
@@ -399,5 +402,93 @@ test_regression <-
        county_crime$black_percent * county_crime$loan_5mil_10mil)
 
 summary(test_regression)
-
 ```
+
+
+```{r}
+county_log <- county_crime %>%
+  mutate(logdays = ifelse(log(days_to_approval) == -Inf, 0, log(days_to_approval))) %>%
+  mutate(logbiz = ifelse(log(businesses_per_pop) == -Inf, 0, log(businesses_per_pop))) %>%
+  mutate(logbanks = ifelse(log(banks_per_pop) == -Inf, 0, log(banks_per_pop))) %>%
+  mutate(logloans = ifelse(log(bank_ppp_issued) == -Inf, 0, log(bank_ppp_issued)))
+
+log_regression <-
+  lm(county_log$logdays ~ 1 + county_log$median_income +
+       county_log$black_percent +
+       county_log$white_percent + county_log$high_school_pct +
+       county_log$banks_per_pop + 
+       county_log$loan_350_1mil + county_log$loan_150_350 + 
+       county_log$loan_5mil_10mil +
+       county_log$loan_2mil_5mil + county_log$loan_1mil_2mil +
+       county_log$republican_percent + county_log$mean_start_cases + 
+       county_log$mean_start_deaths + county_log$mean_end_cases +
+       county_log$mean_end_deaths + 
+       county_log$logloans +
+       county_log$pop_den + county_log$businesses_per_pop +
+       county_log$married_percent + county_log$preference +
+       county_log$requirement + 
+       county_log$stay_at_home_apr +
+       county_log$stay_at_home_current +
+       county_log$non_essential_closure_apr +
+       county_log$non_essential_closure_current + 
+       county_log$unemployment_rate_percent + 
+       county_log$unemployment_rate_apr + 
+       county_log$estimate_gini_index +
+       county_log$violent_crime_rate +
+       
+       county_log$black_percent * county_log$preference +
+       county_log$black_percent * county_log$requirement + 
+       county_log$black_percent * county_log$loan_350_1mil +
+       county_log$black_percent * county_log$loan_150_350 +
+       county_log$black_percent * county_log$loan_1mil_2mil +
+       county_log$black_percent * county_log$loan_5mil_10mil +
+       county_log$black_percent * county_log$loan_5mil_10mil)
+
+summary(log_regression)
+```
+
+```{r}
+# Eicker-White heteroscedasticity-consistent standard errors!!!
+coeftest(test_regression, vcov = vcovHC(test_regression, type = "HC0"))
+```
+
+
+```{r}
+regression_2 <-   lm(county_crime$days_to_approval ~ 1 + county_crime$median_income +
+       county_crime$black_percent +
+       I(county_crime$black_percent^2)
+       county_crime$white_percent + I(county_crime$white_percent^2) +
+       county_crime$high_school_pct +
+       county_crime$banks_per_pop + I(county_crime$banks_per_pop^2) +
+       county_crime$loan_350_1mil + county_crime$loan_150_350 + 
+       county_crime$loan_5mil_10mil +
+       county_crime$loan_2mil_5mil + county_crime$loan_1mil_2mil +
+       county_crime$republican_percent + 
+       county_crime$mean_start_cases + I(county_crime$mean_start_cases^2) +
+       county_crime$mean_start_deaths + I(county_crime$mean_start_deaths^2) +
+       county_crime$mean_end_cases + I(county_crime$mean_end_cases^2) +
+       county_crime$mean_end_deaths + I(county_crime$mean_end_deaths^2) +
+       county_crime$bank_ppp_issued + I(county_crime$bank_ppp_issued^2) +
+       county_crime$pop_den + county_crime$businesses_per_pop +
+       county_crime$married_percent + county_crime$preference +
+       county_crime$requirement + 
+       county_crime$stay_at_home_apr +
+       county_crime$stay_at_home_current +
+       county_crime$non_essential_closure_apr +
+       county_crime$non_essential_closure_current + 
+       county_crime$unemployment_rate_percent + 
+       county_crime$unemployment_rate_apr + 
+       county_crime$estimate_gini_index +
+       county_crime$violent_crime_rate +
+       
+       county_crime$black_percent * county_crime$preference +
+       county_crime$black_percent * county_crime$requirement + 
+       county_crime$black_percent * county_crime$loan_350_1mil +
+       county_crime$black_percent * county_crime$loan_150_350 +
+       county_crime$black_percent * county_crime$loan_1mil_2mil +
+       county_crime$black_percent * county_crime$loan_5mil_10mil +
+       county_crime$black_percent * county_crime$loan_5mil_10mil)
+
+summary(regression2)
+```
+
